network-policy/1-namespace-development.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: development
  labels:
    purpose: development
