network-policy/2-pod-nginx-backend.yaml
apiVersion: v1
kind: Pod
metadata:
  name: backend
  namespace: development
  labels:
    app: webapp
    role: backend
spec:
  containers:
  - image: nginx
    imagePullPolicy: Always
    name: backend
    ports:
    - containerPort: 80
