network-policy/3-pod-alpine-test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: alpine
  namespace: development
spec:
  containers:
  - image: alpine
